--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   sqflite: ^2.3.2
   go_router: ^13.2.1
   intl: ^0.19.0
+  flutter_svg: ^2.0.10+1
+  shared_preferences: ^2.2.2
 
 
 dev_dependencies:
@@ -65,9 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/img/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
