--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -13,7 +13,7 @@ jobs:
       with:
         flutter-version: '3.19.3'
     - run: flutter pub get
-    # test
+    # test1
     - run: flutter build apk --split-per-abi --no-tree-shake-icons --obfuscate --split-debug-info=./obfuscate
       if: ${{ contains(github.event.head_commit.message, 'Update')}}
     - name: Push APK to Releases
