--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,13 @@ dependencies:
     sdk: flutter
 
 
-  flutter_bloc: ^8.1.4
+  flutter_bloc: ^8.1.5
   flutter_svg: ^2.0.10+1
-  go_router: ^13.2.1
+  go_router: ^14.1.2
   intl: ^0.19.0
-  shared_preferences: ^2.2.2
-  sqflite: ^2.3.2
+  shared_preferences: ^2.2.3
+  sqflite: ^2.3.3+1
+  local_auth: ^2.2.0
 
 
 dev_dependencies:
